faltan las demas vistas

--- a/index.html
+++ b/index.html
@@ -4,35 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victus Technologies</title>
+    <!-- Remix Icon -->
+    <link href="https://unpkg.com/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-/>
-
-
 </head>
 <body>
-
-    <!-- Cabecera de la pagina, con el logo y la  barra de navegacion -->
+    <!-- Cabecera de la pagina, con el logo y la barra de navegacion -->
     <header>
         <h1 class="logo">Victus Technologies</h1>
-            <nav>
-                <ul class="navbar">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Acerca de</a></li>
-                    <li><a href="#">Servicios</a></li>
-                </ul>
-            </nav>
+        <nav>
+            <ul class="navbar">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Acerca de</a></li>
+                <li><a href="#">Servicios</a></li>
+            </ul>
+        </nav>
     </header>
 
+    <section class="hero">
+        <div class="hero-text">
+            <h3>¿Precisas realizar mantenimiento a tus equipos?</h3>
+            <h4>¿Querés instalar una red en tu oficina?</h4>
+            <h5>¿Necesitás servicios informáticos en general?</h5>
+            <p>
+                Contrata a Victus Technologies y verás lo que es <br>
+                un servicio totalmente personalizado y efectivo.
+            </p>
+        </div>
+        <div class="image-hero">
+            <img src="images/image1.png" alt="imagen de victus Technologies">
+        </div>
+    </section>
 
-
-
-
-
-
-
-
+    <!-- Íconos de redes sociales -->
+    <div class="iconos">
+        <a href="#">
+            <i class="ri-instagram-fill"></i> Instagram
+        </a>
+        <a href="#">
+            <i class="ri-message-2-fill"></i> Gmail
+        </a>
+        <a href="#">
+            <i class="ri-phone-fill"></i> Número de teléfono
+        </a>
+        <a href="#">
+            <i class="ri-github-fill"></i> GitHub
+        </a>
+    </div>
 </body>
 </html>
