faltan el acerca de,  servicios e hipervinculos

--- a/index.html
+++ b/index.html
@@ -37,20 +37,24 @@
         </div>
     </section>
 
-    <!-- Íconos de redes sociales -->
-    <div class="iconos">
-        <a href="#">
-            <i class="ri-instagram-fill"></i> Instagram
-        </a>
-        <a href="#">
-            <i class="ri-message-2-fill"></i> Gmail
-        </a>
-        <a href="#">
-            <i class="ri-phone-fill"></i> Número de teléfono
-        </a>
-        <a href="#">
-            <i class="ri-github-fill"></i> GitHub
-        </a>
-    </div>
+    <section class="seccion-contacto">
+        <div>
+            <ul class="contacto">
+                <li class="logo"> <img src="images/GitHub_Invertocat_Logo.svg.png" alt="GitHub"> </li>
+                <li class="logo"> <img src="images/304080.svg" alt="telefono"></li>
+                <li class="logo"> <img src="images/png-clipart-gmail-logo-gmail-angle-text.png" alt="gmail"></li>
+            </ul>
+        </div>        
+    </section>
+    <section class="acerca-de">
+        <div>
+            <h2>Victus Technologies</h2>
+            <p>Victus Technologies es una empresa que se dedica a realizar servicios informáticos, creada por <b>Dylan Ostertag</b>,
+                con el fin de garantizar servicio totalmente personalizado, confiable y destacable, asegurando el buen funcionamiento de todos los equipos y trabajos realizados. 
+
+            </p>
+        </div>
+    </section>
 </body>
+
 </html>
